open search when not visible & place in top right - [@MARTIMM requests](https://github.com/Raku/doc-website/issues/299#issuecomment-1722527185) - when search bar not visible, such as when hamburger replaces navigation bar, the `Ctrl-F` will make search visible and place cursor in box - move search bar when hamburger open to top right

--- a/Website/plugins/options-search/css/options-search-light.css
+++ b/Website/plugins/options-search/css/options-search-light.css
@@ -3,6 +3,12 @@
   padding: 0 0 0 0.5rem;
 }
 
+.navbar-search-wrapper {
+  position: absolute;
+  top: 10%;
+  right: 3px;
+}
+
 .navbar-item .button, .navbar-item input {
   height: 1.85em;
 }
